--- a/app/views/api/v1/users/show.html.erb
+++ b/app/views/api/v1/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1>User Show Page</h1>
+<%# <h1>User Show Page</h1>
 <p>http://localhost:3000/api/v1/users</p>
-<h2><%= @user.name %></h2>
+<h2><%= @user.name %></h2> %>
